Fixed an issue with projects overflowing

--- a/style.css
+++ b/style.css
@@ -110,6 +110,8 @@ body{
         padding-right: 20px;
         padding-bottom: 20px;
         margin-bottom: 20px;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 
     .githubprofilepic {
@@ -225,6 +227,7 @@ body{
     .text {
         font-size: 20px;
         padding-left: 20px;
+        padding-right: 20px;
     }
 
     ::-webkit-scrollbar {
